# MagnetMQ

./: README.md  magnet_link_publisher.py  magnetmq-client.py  magnetmq.py  pyproject.toml  requirements.txt
tests/: test_magnet_link_publisher.py  test_magnetmq.py
